--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
   background-image: url('./img/cold-bg.jpg');
   background-size: cover;
   background-position: bottom;
-  transition: .4 ease-out;
+  transition: .4 ease;
 }
 
 .app.warm {
@@ -43,7 +43,57 @@ main {
   color: #313131;
   font-size: 20px;
   transition: .4s ease;
+  outline: none;
 }
+
+.search-box .search-bar:focus {
+  background-color: rgba(255, 255, 255, .75);
+}
+
+.location-box .location {
+  color: #FFF;
+  font-size: 32px;
+  font-weight: 500;
+  text-align: center;
+  text-shadow: 3px 3px rgba(50, 50, 70, .5);
+}
+
+.location-box .date {
+  color: #FFF;
+  font-size: 20px;
+  font-weight: 300;
+  font-style: italic;
+  text-align: center;
+  text-shadow: 2px 2px rgba(50, 50, 70, .5);
+}
+
+.weather-box {
+  text-align: center;
+}
+
+.weather-box .temp {
+  position: relative;
+  display: inline-block;
+  margin: 30px auto;
+  padding: 15px 25px;
+  background-color: rgba(255, 255, 255, .2);
+  border-radius: 16px;
+  color: #FFF;
+  font-size: 100px;
+  font-weight: 900;
+  text-shadow: 3px 6px rgba(50, 50, 70, .5);
+  text-align: center;
+  box-shadow: 3px 6px rgba(0, 0, 0, .2);
+}
+
+.weather-box .weather {
+  color: #FFF;
+  font-size: 48px;
+  font-weight: 700;
+  text-shadow: 3px 3px rgba(50, 50, 70, .5);
+}
+
+
 
 
 
